fix dark mode colours

--- a/obsidian.css
+++ b/obsidian.css
@@ -116,9 +116,9 @@
   --primary-l: 59%;
 
   --primary: hsl(var(--primary-h), calc(var(--primary-s) - 10%), var(--primary-l));
-  --primary-faint: hsl(var(--primary-h), calc(var(--primary-s) - 15%), 17%);
-  --primary-light: hsl(var(--primary-h), calc(var(--primary-s) - 10%), 37%);
-  --primary-dark: hsl(var(--primary-h), calc(var(--primary-s) - 20%), 60%);
+  --primary-faint: hsl(var(--primary-h), calc(var(--primary-s) - 15%), 40%);
+  --primary-light: hsl(var(--primary-h), calc(var(--primary-s) - 10%), 27%);
+  --primary-dark: hsl(var(--primary-h), calc(var(--primary-s) - 20%), 93%);
 
   /* Secondary (Default secondary in Hex: #bbce5d)*/
   /* --secondary-h: 70; */
@@ -127,9 +127,9 @@
   --secondary-l: var(--primary-l);
 
   --secondary: hsl(var(--secondary-h), calc(var(--secondary-s) - 10%), var(--secondary-l));
-  --secondary-faint: hsl(var(--secondary-h), var(--secondary-s), 93%);
-  --secondary-light: hsl(var(--secondary-h), var(--secondary-s), 73%);
-  --secondary-dark: hsl(var(--secondary-h), var(--secondary-s), 40%);
+  --secondary-faint: hsl(var(--secondary-h), var(--secondary-s), 40%);
+  --secondary-light: hsl(var(--secondary-h), var(--secondary-s), 27%);
+  --secondary-dark: hsl(var(--secondary-h), var(--secondary-s), 93%);
 
   /* Background colours */
 
